Update to Fmask 4.3

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-Fmask_4_1_Linux.install
-Fmask_4_2_Linux.install
-Fmask_4_3_Linux.install
-Fmask_4_3_Matlab_Code.zip
+Fmask_4*.install
+Fmask_4*.zip
